@@ -1,5 +1,11 @@
 2005-04-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/slur-scoring.cc (get_bound_info): robustness: substitute
+	relative_coordinate if extent is empty.
+
+	* lily/stem.cc (width_callback): determine correct extent if flag
+	is not there. This fixes slur-no-flag.ly
+
 	* lily/grace-engraver.cc (consider_change_grace_settings): new function.
 	(initialize): also consider_change_grace_settings() on
 	initialization. Fixes large grace notes at start of score.
